<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <FrameLayout
        android:id="@+id/fl_main"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#c4c8cc" />

    <RadioGroup
        android:id="@+id/rg_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rb_sign_in"
            style="@style/HomeRadioButtonTheme"
            android:checked="true"
            android:drawableTop="@drawable/selector_main_tap_address_book"
            android:text="@string/sign_in" />

        <RadioButton
            android:id="@+id/rb_now_location"
            style="@style/HomeRadioButtonTheme"
            android:drawableTop="@drawable/selector_main_tap_now_location"
            android:text="@string/now_location" />

        <RadioButton
            android:id="@+id/rb_address_book"
            style="@style/HomeRadioButtonTheme"
            android:drawableTop="@drawable/selector_main_tap_sign_in"
            android:text="@string/address_book" />

        <RadioButton
            android:id="@+id/rb_mine"
            style="@style/HomeRadioButtonTheme"
            android:drawableTop="@drawable/selector_main_tap_personal_center"
            android:text="@string/personal_center" />
    </RadioGroup>
</LinearLayout>