<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/titlebar_height"
        android:background="@color/colorPrimary">
        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_arrow_left"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:padding="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/text_18_white"
            android:text="@string/change_pass"
            android:layout_centerInParent="true"/>
    </RelativeLayout>
    <EditText
        android:id="@+id/et_old_pass"
        style="@style/ettext_14_gray_gray"
        android:layout_width="match_parent"
        android:layout_marginRight="40dp"
        android:layout_height="30dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="17dp"
        android:background="@null"
        android:hint="@string/old_pass_hit"
        android:inputType="textPassword"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/line"
        android:layout_marginLeft="@dimen/margin_38"
        android:layout_marginRight="@dimen/margin_38"/>
    <EditText
        android:id="@+id/new_pass"
        style="@style/ettext_14_gray_gray"
        android:layout_width="match_parent"
        android:layout_marginRight="40dp"
        android:layout_height="30dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="17dp"
        android:background="@null"
        android:hint="@string/new_pass_hit"
        android:inputType="textPassword"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/line"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="@dimen/margin_38"
        android:layout_marginRight="@dimen/margin_38"/>
    <EditText
        android:id="@+id/et_ok_pass"
        style="@style/ettext_14_gray_gray"
        android:layout_width="match_parent"
        android:layout_marginRight="40dp"
        android:layout_height="30dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="17dp"
        android:background="@null"
        android:hint="@string/ok_pass_hit"
        android:inputType="textPassword"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/line"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="@dimen/margin_38"
        android:layout_marginRight="@dimen/margin_38"/>
    <Button
        android:id="@+id/bt_ok"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginTop="29dp"
        android:layout_marginLeft="@dimen/margin_38"
        android:layout_marginRight="@dimen/margin_38"
        android:background="@drawable/shape_button_bg"
        android:text="@string/ok_update"
        android:textColor="@color/white"
        android:textSize="16sp"
        />
</LinearLayout>