<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/titlebar_height"
        android:background="@color/colorPrimary">
        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_arrow_left"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:padding="10dp"/>
        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/text_18_white"
            android:text="@string/change_phone"
            android:layout_centerInParent="true"/>
    </RelativeLayout>
    <TextView
        android:id="@+id/et_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="18363602752"
        style="@style/ettext_14_gray_gray"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="28dp"
        android:layout_marginRight="40dp"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/line"
        android:layout_marginTop="14dp"
        android:layout_marginLeft="@dimen/margin_38"
        android:layout_marginRight="@dimen/margin_38"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/et_code"
            style="@style/ettext_14_gray_gray"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="17dp"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/code_hit"/>
        <TextView
            android:id="@+id/tv_send_code"
            style="@style/text_14_blue"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="52dp"
            android:layout_alignParentRight="true"
            android:text="@string/sen_code"
            android:layout_marginTop="17dp"
            android:gravity="center_vertical"/>
        <View
            android:layout_width="1dp"
            android:layout_height="30dp"
            android:layout_marginTop="17dp"
            android:background="@color/line"
            android:layout_toLeftOf="@id/tv_send_code"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/line"
        android:layout_marginLeft="@dimen/margin_38"
        android:layout_marginRight="@dimen/margin_38"/>
    <Button
        android:id="@+id/bt_ok"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="@dimen/margin_38"
        android:layout_marginRight="@dimen/margin_38"
        android:background="@drawable/shape_button_bg"
        android:text="@string/next_step"
        android:textColor="@color/white"
        android:textSize="16sp"
       />
</LinearLayout>