<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             android:layout_width="match_parent"
                  android:layout_height="match_parent"
    android:background="@color/pgbg">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="50dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_logo"/>

    <EditText
        android:id="@+id/et_account"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_marginLeft="38dp"
        android:layout_marginRight="38dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/shape_rounded_rectangle5_orange_line_bg"
        android:drawableLeft="@mipmap/ic_account"
        android:paddingLeft="19dp"
        android:drawablePadding="10dp"
        android:textSize="14sp"
        android:hint="@string/account_hit"
        android:textColorHint="@color/hit"
        android:textColor="@color/colorPrimary"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        android:layout_marginStart="38dp"
        android:layout_marginEnd="38dp"/>
    <EditText
        android:id="@+id/et_pass"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_marginLeft="38dp"
        android:layout_marginRight="38dp"
        android:layout_marginTop="22dp"
        android:background="@drawable/shape_rounded_rectangle5_orange_line_bg"
        android:drawableLeft="@mipmap/ic_pass"
        android:paddingLeft="19dp"
        android:drawablePadding="10dp"
        android:textSize="14sp"
        android:hint="@string/pass_hit"
        android:textColorHint="@color/hit"
        android:textColor="@color/colorPrimary"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_account"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginStart="38dp"
        android:layout_marginEnd="38dp"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_marginEnd="38dp"
        android:layout_marginLeft="38dp"
        android:layout_marginRight="38dp"
        android:layout_marginStart="38dp"
        android:layout_marginTop="26dp"
        android:background="@drawable/shape_button_bg"
        android:text="登录"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_pass"/>

    <TextView
        android:id="@+id/tv_forget_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forget_pass"
        android:textSize="14sp"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="22dp"
        app:layout_constraintTop_toBottomOf="@+id/button"
        android:layout_marginLeft="38dp"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/phone_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="38dp"
        android:layout_marginTop="22dp"
        android:text="@string/phone_login"
        android:textSize="14sp"
        android:textColor="@color/colorPrimary"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button"/>


</android.support.constraint.ConstraintLayout>